[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "postflop-solver"
version = "0.1.0"
description = "An open-source postflop solver for Texas hold'em poker"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.8"

[tool.maturin]
features = ["python"]
